# slibc

./: .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  main.c  slibc.conf  slibc.pc.in  start_main.c  stdlib.c  stdlib.h
.github/workflows/: generate_docs.yml  gtest.yml  testing.yml  tests.yml
example/: CMakeLists.txt
example/src/: main.c
include/: ctype.h  signal.h  stdarg.h  stdint.h  stdio.h  stdlib.h  string.h  syscall.h
include/mman/: mman.h
include/stdio/: put_internal.h
include/stdlib/: convert.h
include/syscall/: syscall.h
slibc/: .clang-tidy  CMakeLists.txt  slibc.pc.in
slibc/include/: assert.h  ctype.h  mman.h  signal.h  stdio.h  stdlib.h  string.h  syscall.h
slibc/include/mman/: mman.h
slibc/include/stdio/: itoa.h  put_internal.h
slibc/include/stdlib/: convert.h
slibc/include/syscall/: syscall.h
slibc/src/: mman.c  stdlib.c  string.c
slibc/src/ctype/: ctype.c
slibc/src/mman/: mman.c  mmap.c  munmap.c
slibc/src/signal/: signal.c
slibc/src/stdio/: direct_io.c  file_access.c  file_operations.c  file_positioning.c  formatted_io.c  getc.c  itoa.c  printf.c  put.c  put_internal.c  scanf.c  stdio.c  unformatted_io.c
slibc/src/stdlib/: convert.c  malloc.c  stdlib.c
slibc/src/string/: char_array_manip.c  misc.c  string.c  string_exam.c  string_manip.c
slibc/src/syscall/: read.c  syscall.c  write.c
slibc/src/utils/: stack_chk_fail.c
slibc/start_main/: CMakeLists.txt  slibc_start_main.pc.in
slibc/start_main/src/: start_main.c
slibc/stdlib/: mman.c  signal.c  stdio.c  stdlib.c  string.c  syscall.c
src/: main.c
src/ctype/: ctype.c
src/mman/: mmap.c  munmap.c
src/signal/: signal.c
src/stdio/: error_handling.c  file_access.c  file_operations.c  formatted_io.c  put_internal.c  unformatted_io.c
src/stdlib/: convert.c  malloc.c  stdlib.c
src/string/: char_array_manip.c  misc.c  string_manip.c
src/syscall/: syscall.c  write.c
src/utils/: stack_chk_fail.c
start_main/: CMakeLists.txt
stdlib/: start_main.c  stdio.c  stdlib.c  string.c  syscall.c
test/: CMakeLists.txt
test/src/: main.c
tests/: CMakeLists.txt  a.out  ctype_tests.c  ctype_tests.cc
tests/ctype_tests/: CMakeLists.txt  test_ctype.c  test_ctype_upper_lower.c
tests/src/: ctype_tests.c  ctype_tests.cc  stdio_tests.c  stdio_tests.cc  stdlib_tests.c  stdlib_tests.cc  string_tests.c  string_tests.cc  tests.c  tests.cc  tests.h
tests/stdio_tests/: CMakeLists.txt  test_stdio_printf_empty.c  test_stdio_printf_string_literal.c
